--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+    "env": {
+        "jest": true,
+        "browser": true,
+        "node": true
+    },
     "extends": [
         "plugin:react/recommended",
         "airbnb"
@@ -14,5 +19,6 @@
         "react"
     ],
     "rules": {
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
