--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.{js, ts}\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.{js, ts}\" --fix",
+    "lint-check": "eslint \"{src,apps,libs,test}/**/*.{js, ts}\""
   },
   "eslintConfig": {
     "extends": [
