--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@testing-library/user-event": "^12.5.0",
     "axios": "^0.21.0",
     "mdbreact": "^5.0.1",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
     "mui-datatables": "^3.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
