--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,39 @@
 {
+    "root": true,
     "env": {
         "jest": true,
         "browser": true,
         "node": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "airbnb"
+/* Waiting for fix
+https://github.com/facebook/create-react-app/issues/10021#issuecomment-724247806
+https://github.com/facebook/create-react-app/issues/9887
+*/
+//        "plugin:react/recommended",
+//        "airbnb"
     ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 12,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "import",
+        "react-hooks"
     ],
+    "parser": "babel-eslint",
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "import/no-named-as-default": 0,
+        "import/no-named-as-default-member": 0,
         "linebreak-style": 0,
-        "global-require": 0
+        "no-console": "off",
+        "global-require": 0,
+        "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+        "react/destructuring-assignment": 0
     }
 }
