--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "mobx-react": "^7.0.5",
     "mui-datatables": "^3.7.1",
     "react": "^17.0.1",
+    "react-client-session": "0.0.3",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -56,5 +58,9 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0"
+  },
+  "config": {
+    "host": "0.0.0.0",
+    "port": "3333"
   }
 }
